--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supabase:pull": "npx supabase db pull"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
@@ -35,7 +36,7 @@
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
     "stripe": "^14.25.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7"
   },
