--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "0.330.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "openai": "^4.55.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
