--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@tabler/icons-react": "^3.12.0",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "framer-motion": "^11.3.28",
     "lucide-react": "0.330.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
